--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.2.1",
     "husky": "^7.0.4",
     "react": "^17.0.2",
+    "react-animated-css": "^1.2.1",
     "react-dom": "^17.0.2",
     "react-lottie-player": "^1.4.1",
     "react-scripts": "5.0.0",
