--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "@trendyol-js/react-carousel": "^2.0.1",
     "husky": "^7.0.4",
     "react": "^17.0.2",
     "react-animated-css": "^1.2.1",
